--- a/pages/dom/dom1.html
+++ b/pages/dom/dom1.html
@@ -7,6 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>dom 基础测试27</title>
     <style>
+        html,
+        body {
+            height: 100%;
+            overflow: hidden;
+        }
+
         #j-back-top {
             position: fixed;
             bottom: 50px;
