--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
                 '上下布局',
                 '等宽布局',
                 '左中右',
-                'navbar'
+                'navbar',
+                'cell'
             ],
             dom: [
                 'backtop',
