--- a/pages/css/css11.html
+++ b/pages/css/css11.html
@@ -79,8 +79,8 @@
 </head>
 
 <body>
-    <div class="cell">
-        <div class="cell-title">标题</div>
+    <section class="cell">
+        <h4 class="cell-title">标题</h4>
         <ul class="cell-list">
             <li class="cell-list-item">
                 <i class="icon icon-chat"></i>
@@ -106,7 +106,7 @@
                     实验：再接下来的30天内（知道2019-09-07），以3票为基准关闭和重新打开提示之类的
                 </a>
             </li>
-        </ul>
+        </section>
     </div>
 </body>
 
