--- a/index.html
+++ b/index.html
@@ -287,7 +287,8 @@
                 '__toFixed',
                 '数组操作',
                 'encodeURI',
-                'XMLHttpRequest'
+                'XMLHttpRequest',
+                '还是正则操作'
             ]
         };
 
