--- a/pages/js/js11.html
+++ b/pages/js/js11.html
@@ -10,10 +10,33 @@
 
 <body>
     <script>
-    // 第一题
-    let bankCode = '6222081812002934027';
-    let arr = bankCode.match(/\d{3,4}/g)
-    console.log(arr);
+        // 第一题
+        let bankCode = '6222081812002934027';
+
+        let bankCodeArr = bankCode.match(/\d{3,4}/g);
+        document.write(bankCodeArr.join(' '));
+        document.write('<br/>');
+
+        // 第二题
+        let numberCode = '5702375';
+
+        let numberCodeReverse = numberCode.split('').reverse().join('');
+        let numberCodeArr = numberCodeReverse.match(/\d{1,3}/g);
+        document.write(numberCodeArr.reverse().join(','));
+        document.write('<br/>');
+
+        // 第三题 K,M,G
+        let fileSize = 2837475;
+        var K = 1024;
+        let size = '';
+        if (fileSize >= K ** 3) {
+            size = (fileSize / K ** 3).toFixed(2) + "G";
+        } else if (fileSize >= K ** 2) {
+            size = (fileSize / K ** 2).toFixed(2) + "M";
+        } else {
+            size = (fileSize / K).toFixed(2) + "K";
+        }
+        document.write(size);
     </script>
 </body>
 
