--- a/index.html
+++ b/index.html
@@ -275,7 +275,8 @@
                 'linear-gradient',
                 'getAttribute',
                 'loginform',
-                'textarea'
+                'textarea',
+                'dialog'
             ],
             js: [
                 'regex规则表达式',
