--- a/index.html
+++ b/index.html
@@ -263,7 +263,8 @@
                 '等宽布局',
                 '左中右',
                 'navbar',
-                'cell'
+                'cell',
+                'absulute'
             ],
             dom: [
                 'backtop',
@@ -276,7 +277,7 @@
                 'getAttribute',
                 'loginform',
                 'textarea',
-                'dialog'
+                'dialog',
             ],
             js: [
                 'regex规则表达式',
